@@ -46,6 +46,17 @@ schema = Schema((
         default_output_type='text/html',
     ),
 
+    ImageField(
+        name='foto',
+        widget=ImageWidget(
+            label="Photo",
+            label_msgid='minaraad_label_foto',
+            i18n_domain='minaraad',
+        ),
+        storage=AttributeStorage(),
+        sizes={'foto':(300,300)}
+    ),
+
     OrderableReferenceField(
         name='contact',
         vocabulary_display_path_bound="-1",
